FIX HEAD add js file

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="acces/style.css">
     <link href="http://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
     <title>Mi</title>
+</head>
 
 <body>
     <header class="header">
@@ -33,7 +34,7 @@
         </div>
     </div>
 
+<script src="mr-structure/example.js"></script>
 </body>
-</head>
 
 </html>
