--- a/Index.html
+++ b/Index.html
@@ -8,12 +8,15 @@
     <title>Mi</title>
 </head>
 
+
 <body>
     <header class="header">
         <div class="container">
             <div class="headerinner">
+
+
                 <div class="header_logo">
-                    <h1>MiMi</h1>
+                    <img class="header_logo1" src="acces/img/2.png" alt="MiMi">
                 </div>
                 <nav class="nav">
                     <a class="nav_link" href="#">About</a>
@@ -29,12 +32,19 @@
         <div class="container">
             <div class="introinner">
                 <h1 class="intro_title">Welcome to Memi</h1>
-                <a class="btn" href="#">ОРНУТЪ</a>
+                <a class="btn" href="#header_Mems">ОРНУТЪ</a>
             </div>
         </div>
     </div>
+    
+    <section class="section">
+        <div class="Mem_item">
+           <div id="header_Mems">
+                <img class="header_mems1" src="acces/img/4.png" alt="">
+            </div>
+            
+        </div>
+    </section>
 
-<script src="mr-structure/example.js"></script>
-</body>
-
-</html>
+    <script src="mr-structure/example.js"></script>
+</body></html>
