Add link "About", add effect mirror for nav and BlockText, add shadow Block, changes img in "Орнуть".

--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
                     <img class="header_logo1" src="acces/img/2.png" alt="MiMi">
                 </div>
                 <nav class="nav">
-                    <a class="nav_link" href="#">About</a>
+                    <a class="nav_link" href="#About_Mems">About</a>
                     <a class="nav_link" href="#">Service</a>
                     <a class="nav_link" href="#">Work</a>
                     <a class="nav_link" href="#">Contact</a>
@@ -36,13 +36,26 @@
             </div>
         </div>
     </div>
-    
-    <section class="section">
+
+    <section class="section1">
         <div class="Mem_item">
-           <div id="header_Mems">
-                <img class="header_mems1" src="acces/img/4.png" alt="">
+            <div class="ORIO"><h1 class="ORIO1">
+            ОРИ В ГОЛОС
+            </h1></div>
+            <div id="header_Mems">
+                <img class="header_mems1" src="acces/img/5.png" alt="">
             </div>
-            
+
+        </div>
+    </section>
+    <section class="section2">
+        <div class="About">
+            <div id="About_Mems">
+                <h1 class="About_Mems1">О сайте</h1>
+            </div>
+            <div class="About_Mems2">
+                <h2>С другой стороны начало повседневной работы по формированию позиции влечет за собой процесс внедрения и модернизации существующих финансовых и административных условий! Дорогие друзья, постоянное информационно-техническое обеспечение нашей деятельности позволяет выполнить важнейшие задания по разработке дальнейших направлений развитая системы массового участия? Значимость этих проблем настолько очевидна, что курс на социально-ориентированный национальный проект позволяет оценить значение позиций, занимаемых участниками...</h2>
+            </div>
         </div>
     </section>
 
