change feature_icon an feature__icon

--- a/Index.html
+++ b/Index.html
@@ -44,37 +44,37 @@
         <div><a name="features-link" href=""></a>
             <div class="features">
                 <div class="features__item">
-                    <img class="features_icon" src="acces/img/icon/1.png" alt="">
+                    <img class="features__icon" src="acces/img/icon/1.png" alt="">
                     <h4 class="features__title">TEST</h4>
                     <div class="features__text">Разнообразный и богатый опыт постоянное информационно-техническое обеспечение нашей деятельности позволяет оценить значение модели развития.</div>
                 </div>
 
                 <div class="features__item">
-                    <img class="features_icon" src="acces/img/icon/2.png" alt="">
+                    <img class="features__icon" src="acces/img/icon/2.png" alt="">
                     <h4 class="features__title">TEST</h4>
                     <div class="features__text">Разнообразный и богатый опыт постоянное информационно-техническое обеспечение нашей деятельности позволяет оценить значение модели развития.</div>
                 </div>
 
                 <div class="features__item">
-                    <img class="features_icon" src="acces/img/icon/3.png" alt="">
+                    <img class="features__icon" src="acces/img/icon/3.png" alt="">
                     <h4 class="features__title">TEST</h4>
                     <div class="features__text">Разнообразный и богатый опыт постоянное информационно-техническое обеспечение нашей деятельности позволяет оценить значение модели развития.</div>
                 </div>
 
                 <div class="features__item">
-                    <img class="features_icon" src="acces/img/icon/4.png" alt="">
+                    <img class="features__icon" src="acces/img/icon/4.png" alt="">
                     <h4 class="features__title">TEST</h4>
                     <div class="features__text">Разнообразный и богатый опыт постоянное информационно-техническое обеспечение нашей деятельности позволяет оценить значение модели развития.</div>
                 </div>
 
                 <div class="features__item">
-                    <img class="features_icon" src="acces/img/icon/5.png" alt="">
+                    <img class="features__icon" src="acces/img/icon/5.png" alt="">
                     <h4 class="features__title">TEST</h4>
                     <div class="features__text">Разнообразный и богатый опыт постоянное информационно-техническое обеспечение нашей деятельности позволяет оценить значение модели развития.</div>
                 </div>
 
                 <div class="features__item">
-                    <img class="features_icon" src="acces/img/icon/6.png" alt="">
+                    <img class="features__icon" src="acces/img/icon/6.png" alt="">
                     <h4 class="features__title">TEST</h4>
                     <div class="features__text">Разнообразный и богатый опыт постоянное информационно-техническое обеспечение нашей деятельности позволяет оценить значение модели развития.</div>
                 </div>
