--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
     <div class="intro">
         <div class="container">
             <div class="introinner">
-                <h1 class="intro_title">Welcome to Memi</h1>
+                <h1 class="intro_title">Welcome to Mems</h1>
                 <a class="btn" href="#mems">ОРНУТЪ</a>
             </div>
         </div>
@@ -87,8 +87,8 @@
 
 
     <!--Mems-->
-    <div class="mems">
 
+    <div class="mems">
 
         <div class="mems__item">
             <img class="mems__img" src="acces/img/mems/1.jpg" alt="">
@@ -156,8 +156,12 @@
             <img class="mems__img" src="acces/img/mems/15.jpg" alt="">
 
         </div>
+
     </div>
     <!--/Mems-->
+
+
+
 
     <!--Our team-->
     <div class="team">
