--- a/Index.html
+++ b/Index.html
@@ -21,9 +21,9 @@
                 </div>
                 <nav class="nav">
                     <a class="nav_link" href="#features-link">Feature</a>
-                    <a class="nav_link" href="#mems">MEMs</a>
-                    <a class="nav_link" href="#Work_Mems">Our team</a>
-                    <a class="nav_link" href="#Contact_Mems">Contact</a>
+                    <a class="nav_link" href="#mems-link">MEMs</a>
+                    <a class="nav_link" href="#our_team-link">Our team</a>
+                    <a class="nav_link" href="#contact-link">Contact</a>
                 </nav>
             </div>
         </div>
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="introinner">
                 <h1 class="intro_title">Welcome to Mems</h1>
-                <a class="btn" href="#mems">ОРНУТЪ</a>
+                <a class="btn" href="#mems-link">ОРНУТЪ</a>
             </div>
         </div>
     </div>
@@ -88,7 +88,7 @@
 
     <!--Mems-->
 
-    <div class="mems">
+    <div class="mems"><a name="mems-link" href=""></a>
 
         <div class="mems__item">
             <img class="mems__img" src="acces/img/mems/1.jpg" alt="">
@@ -164,7 +164,7 @@
 
 
     <!--Our team-->
-    <div class="team">
+    <div class="team"><a name="our_team-link" href=""></a>
         <div class="container">
             <div class="team__inner">
                 <div class="team__item">
@@ -223,6 +223,26 @@
         <!--/ team__container-->
     </div>
     <!--/Our team-->
+
+
+
+    <!--  Contact  -->
+    <div class="contact"><a name="contact-link" href=""></a>
+        <div class="container">
+            <div class="contact__item">
+                <a href="https://instagram.com/lex_day_tg"><img class="contact__icon" src="./acces/img/icon/8.png" alt=""></a>
+            </div>
+
+            <div class="contact__item">
+                <a href="https://m.vk.com/alexdt1"><img class="contact__icon" src="./acces/img/icon/7.png" alt=""></a>
+            </div>
+
+            <div class="contact__item">
+                <a href="https://t.me/lex_day"><img class="contact__icon" src="./acces/img/icon/9.png" alt=""></a>
+            </div>
+
+        </div>
+    </div><!--  /Contact  -->
 
 
 
